Fixed Overlap Issue

--- a/src/components/class/class.css
+++ b/src/components/class/class.css
@@ -8,7 +8,7 @@
   display: flex;
   width: 40ch;
   border: solid;
-  height: 4ch;
+  min-height: 4ch;
   transition: 0.2s;
 }
 
